// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Main /> render renders correctly with statusAthoridation = AUTH 1`] = `
<React.Fragment>
  <div
    className="page page--gray page--main"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <div
          className="header__wrapper"
        >
          <div
            className="header__left"
          >
            <a
              className="header__logo-link header__logo-link--active"
            >
              <img
                alt="6 cities logo"
                className="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            className="header__nav"
          >
            <ul
              className="header__nav-list"
            >
              <li
                className="header__nav-item user"
              >
                <Link
                  className="header__nav-link header__nav-link--profile"
                  to="/favorites"
                >
                  <div
                    className="header__avatar-wrapper user__avatar-wrapper"
                  />
                  <span
                    className="header__user-name user__name"
                  >
                    Oliver.conner@gmail.com
                  </span>
                </Link>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      className="page page--gray page--main page__main--index-empty"
    >
      <h1
        className="visually-hidden"
      >
        Cities
      </h1>
      <Memo(Connect(CitiesList)) />
    </main>
  </div>
</React.Fragment>
`;

exports[`<Main /> render renders correctly with statusAthoridation = NO_AUTH 1`] = `
<React.Fragment>
  <div
    className="page page--gray page--main"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <div
          className="header__wrapper"
        >
          <div
            className="header__left"
          >
            <a
              className="header__logo-link header__logo-link--active"
            >
              <img
                alt="6 cities logo"
                className="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            className="header__nav"
          >
            <ul
              className="header__nav-list"
            >
              <li
                className="header__nav-item user"
              >
                <Link
                  className="header__nav-link header__nav-link--profile"
                  href="#"
                  to="/login"
                >
                  <div
                    className="header__avatar-wrapper user__avatar-wrapper"
                  />
                  <span
                    className="header__login"
                  >
                    Sign in
                  </span>
                </Link>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      className="page page--gray page--main page__main--index-empty"
    >
      <h1
        className="visually-hidden"
      >
        Cities
      </h1>
      <Memo(Connect(CitiesList)) />
    </main>
  </div>
</React.Fragment>
`;
